# churn-prediction-mlp

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  RUNNING.md  Tech Challenge Fase 01.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
data/processed/: telco_customer_churn_processed.csv
docs/: ML Canvas.md  architecture.md  model_card.md  monitoring.md  refatoracao.md
eda_ciclo_de_vida_de_modelos_sem_mlp_pytorch/src/: train.py  utils.py
eda_ciclo_de_vida_de_modelos_sem_mlp_pytorch/tests/: unit_tests.py
notebooks/: baseline_models.ipynb  eda.ipynb  mlp_training_and_comparison.ipynb
src/: __init__.py  dataset.py  early_stopping.py  model.py  pipeline.py  register.py  register_models.py  train.py  train_baselines.py  train_mlp.py  utils.py
src/api/: __init__.py  main.py  routes.py  schemas.py
src/api/core/: __init__.py  logger.py  middleware.py
src/api/services/: __init__.py  model_service.py
src/api/tests/: test_api.py  test_schema.py
tests/: test_api.py  test_schema.py  test_smoke.py  unit_tests.py
