# pyproject.toml — configuração central do projeto.
# Declara dependências, configura ruff (linter) e pytest.
# Para instalar o projeto em modo editável: pip install -e .
# Para instalar dependências de desenvolvimento: pip install -e ".[dev]"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "churn-prediction-mlp"
version = "0.1.0"
description = "Pipeline end-to-end de predicao de churn com MLP PyTorch e API FastAPI"
requires-python = ">=3.11"

# Dependências principais — instaladas em qualquer ambiente
dependencies = [
    "scikit-learn>=1.3.0",
    "mlflow>=2.10.0",
    "pandas>=2.0.0",
    "torch>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "joblib>=1.3.0",
]

[project.optional-dependencies]
# Dependências de desenvolvimento — instaladas com: pip install -e ".[dev]"
dev = [
    "pytest>=7.4.0",
    "ruff>=0.4.0",
    "pandera>=0.20.0",
    "httpx>=0.24.0",
]

[project.scripts]
# Atalho de terminal: após instalar o pacote, 'treinar-modelo' executa o treino
treinar-modelo = "src.train_mlp:train_model"

[tool.setuptools.packages.find]
# Informa ao setuptools que os pacotes Python estão dentro de src/
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E = erros de estilo, F = erros lógicos, W = avisos, I = ordenação de imports
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
